Week 9: Production-ready improvements
- Made admin UI fully mobile responsive
- Replaced hardcoded URLs with environment variables
- Updated from localhost to server IP (192.168.100.124)
- Removed all mock data from admin analytics/dashboard
- Fixed widget embed code copy functionality
- Resolved modal scroll/close bug by removing success modal

--- a/static/test-widget.html
+++ b/static/test-widget.html
@@ -148,7 +148,7 @@
     </div>
 
     <!-- Chat Widget Script -->
-    <script src="https://localhost/widget.js"></script>  <!-- ✅ NEW PATH -->
+    <script src="https://192.168.100.124/widget.js"></script>
     
     <script>
         // Demo widget instance
@@ -161,7 +161,7 @@
             setTimeout(() => {
                 widget = new ChatWidget({
                     siteKey: 'demo-widget-key',
-                    apiUrl: 'https://localhost/api',
+                    apiUrl: 'https://192.168.100.124/api',
                     businessName: 'Demo Support',
                     widgetTitle: 'Chat with Demo Team',
                     welcomeMessage: 'Hi! This is a demo of our chat widget. Try sending a message!',
@@ -224,7 +224,7 @@
                 setTimeout(() => {
                     widget = new ChatWidget({
                         siteKey: 'demo-widget-key',
-                        apiUrl: 'http://127.0.0.1:5000/api',
+                        apiUrl: 'https://192.168.100.124/api',
                         businessName: 'Demo Support',
                         widgetTitle: 'Chat with Demo Team',
                         welcomeMessage: 'Theme changed! How do you like the new colors?',
