--- a/test-widget.html
+++ b/test-widget.html
@@ -148,7 +148,8 @@
     </div>
 
     <!-- Chat Widget Script -->
-    <script src="https://192.168.100.124/widget.js"></script>
+    <!-- Chat Widget Script - USING YOUR WIDGET -->
+    <script defer src="https://192.168.100.124/widget.js" data-site-key="widget-mj70q7ao-wqrc1x"></script>
     
     <script>
         // Demo widget instance
@@ -160,7 +161,7 @@
             // But we can also create a custom instance
             setTimeout(() => {
                 widget = new ChatWidget({
-                    siteKey: 'demo-widget-key',
+                    siteKey: 'widget-mj70q7ao-wqrc1x',
                     apiUrl: 'https://192.168.100.124/api',
                     businessName: 'Demo Support',
                     widgetTitle: 'Chat with Demo Team',
