--- a/static/test-widget.html
+++ b/static/test-widget.html
@@ -149,7 +149,7 @@
 
     <!-- Chat Widget Script -->
     <!-- Chat Widget Script - USING YOUR WIDGET -->
-    <script defer src="https://192.168.100.124/widget.js" data-site-key="widget-mj70q7ao-wqrc1x"></script>
+    <script defer src="http://localhost/widget.js" data-site-key="widget-mj70q7ao-wqrc1x"></script>
     
     <script>
         // Demo widget instance
@@ -162,7 +162,7 @@
             setTimeout(() => {
                 widget = new ChatWidget({
                     siteKey: 'widget-mj70q7ao-wqrc1x',
-                    apiUrl: 'https://192.168.100.124/api',
+                    apiUrl: 'http://localhost/api',
                     businessName: 'Demo Support',
                     widgetTitle: 'Chat with Demo Team',
                     welcomeMessage: 'Hi! This is a demo of our chat widget. Try sending a message!',
